# tw_fin_rl

./: .gitignore  README.md  doc_1_data.md  pyproject.toml  requirements.txt
ace_rl/core/: candle_feat_ops.py  cube_builder.py  cube_feature.py
ace_rl/core/label/: __init__.py  doc_1_single_symbol.md  label_barrier.py  label_forward.py  label_meta.py  single_symbol.py
ace_rl/exp_learn/model_loop/: _1_vol_ret_list.ipynb
ace_rl/exp_learn/raw_data/: _0_agg_trades.ipynb  _0_history_trades.ipynb  _0_raw_candle.ipynb  _1_polar_prep_per_symbol.ipynb  (+14 more)
doc/: 0_slide.md  2_baseline_plan.md  2_rl_based_portfolio.md  code_summary.py  code_summary_output.py
fin_rl/agent/: utils.py
notebook/data/: 1_binance_verify.ipynb  2_0_gdelt_quickcheck_notebook.ipynb  2_1_gdelt_verify_split_data.ipynb  2_2_gdelt_verify_split_data.ipynb  2_3_gdelt_verify_split_data.ipynb  2_4_gdelt_verify_split_data.ipynb  2_5_gdelt_norm_verify.ipynb  2_6_gdelt_feature.ipynb
notebook/exp/: 1_binance_ohlcv_examine.ipynb  2_gdelt_news_examine.ipynb  3_news_candle_align.ipynb  make_news_notebook.py
report/: report.md
report/w1/: summary.md
report/w2/: slide.md  summary.md
simplest_ml/: .gitignore  note.md
simplest_ml/w1/: 1_sp_candle_trend_predict.ipynb  2_1_multi_token_data.ipynb  2_2_multi_token_model.ipynb  2_2_result.md  3_1_enhanced_model.ipynb  3_1_result.md  3_2_result.md  4_1_minute_data.ipynb  5_1_multi_time_level.ipynb  data_minute.py  features_minute.py  multi_token_modeling.py  multi_token_modeling_v1.py  multi_token_modeling_v2.py  multi_token_modeling_v3.py  pretty_helpers.py
(+49 files in other folders)
