[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fin_rl"
version = "0.1.0"                # hoặc bỏ hẳn và dùng setuptools_scm (xem bên dưới)
description = "Financial RL research and data toolkit"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}         # đổi nếu cần
authors = [{name = "Your Name", email = "you@example.com"}]
dependencies = [
  "pandas>=1.3",
  "numpy>=1.21",
  "matplotlib>=3.4",
]

[project.optional-dependencies]
dev = ["jupyter", "pytest", "black", "ruff"]

[tool.setuptools.packages.find]
# Tự tìm các package dạng fin_rl, fin_rl.*
include = ["fin_rl*", "ace_rl*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools]
# Nếu bạn có data file trong package (ví dụ templates, *.yaml):
# include-package-data = true

# (Tuỳ chọn) Nếu bạn muốn tự động lấy version theo git tag:
# Khi đó, bỏ `version` ở [project] phía trên và dùng khối dưới + add 'setuptools-scm' trong build-system.requires
# [tool.setuptools_scm]
# version_scheme = "post-release"
# local_scheme = "node-and-date"
